log
Thu 07 Sep 2023 03:27:09 PM UTC: 
 hashmap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘table’
   63 |     map->table = (Pair**)malloc(sizeof(Pair*) * capacity);
      |        ^~
hashmap.c:65:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘table’
   65 |     if (map->table == NULL) {
      |            ^~
hashmap.c:72:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘table’
   72 |         map->table[i] = NULL;
      |            ^~
Compilation failed
ff9c043
Thu 07 Sep 2023 03:28:36 PM UTC: 
 hashmap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
dc0ab9b
Thu 07 Sep 2023 03:34:02 PM UTC: 
 hashmap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:27: error: too few arguments to function ‘hash’
   48 |     unsigned long index = hash(key) % map->capacity;
      |                           ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c: At top level:
hashmap.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
Compilation failed
5069027
Thu 07 Sep 2023 03:34:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:27: error: too few arguments to function ‘hash’
   48 |     unsigned long index = hash(key) % map->capacity;
      |                           ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
e74d39d
Thu 07 Sep 2023 03:36:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9dd301b
Thu 07 Sep 2023 04:03:09 PM UTC: 
 hashmap.c | 17 -----------------
 1 file changed, 17 deletions(-)
 tests:  0|0
5e7b904
Thu 07 Sep 2023 04:05:25 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:98:10: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   98 |   if (map->buckets == NULL) {
      |       ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e633454
Thu 07 Sep 2023 04:07:47 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:98:10: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   98 |   if (map->buckets == NULL) {
      |       ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
68ef0bc
Thu 07 Sep 2023 04:17:04 PM UTC: 
 hashmap.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:92:10: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   92 |   if (map->buckets == NULL) {
      |       ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
018bf27
